[package]
name = "lexicon"
version = "0.1.0"
authors = ["alex0112 <alarsen0112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
futures = "0.3.12"
error-chain = "0.12.4"